[gd_scene load_steps=5 format=2]

[ext_resource path="res://ControlPanel/PushButton/button_2test.png" type="Texture" id=1]
[ext_resource path="res://ControlPanel/PushButton/button_2test_P.png" type="Texture" id=2]
[ext_resource path="res://ControlPanel/PushButton/PushButton.gd" type="Script" id=3]
[ext_resource path="res://ControlPanel/_Labels/Label.tscn" type="PackedScene" id=4]

[node name="Control" type="TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -552.0
margin_bottom = -976.0
shortcut_in_tooltip = false
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" parent="." instance=ExtResource( 4 )]

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 2.56668
margin_top = 15.9912
margin_right = 42.5667
margin_bottom = 29.9912
text = "Text"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Control_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Control_pressed"]
